# mpl-playback

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  data.json  file.py  playback.py  pyproject.toml  readthedocs.yml  record.py  setup.cfg  setup.py
.github/workflows/: lint.yml  publish.yml
LICENSE/: LICENSE_sphinx_gallery
doc/: Makefile  commandline.md  conf.py  contributing.md  environment.yml  index.md  index.rst  sphinx-gallery.md
examples/: README.rst  _dynamic-playback.json  _gen_images.py  _multifig-playback.json  _playback.py  _plot_file-playback.json  dynamic.py  file.py  gogogo_sg_skip.py  multifig.py  plot_file.py  static.py
mpl_playback/: __init__.py  _schema_vesion.py  _version.py  playback.py  record.py  scraper.py  util.py
