[metadata]
name = mpl_playback
description = Record and playback matplotlib figures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ianhi/mpl-playback
author = Ian Hunt-Isaak
author_email = ianhuntisaak@gmail.com
license = BSD-3-Clause
license_files = LICENSE/LICENSE
classifiers =
    Framework :: Matplotlib
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
download_url = https://github.com/ianhi/mpl-playback
keywords = matplotlib, gif
project_urls =
    Source = https://github.com/ianhi/mpl-playback
    Tracker = https://github.com/ianhi/mpl-playback/issues

[options]
packages = find:
install_requires =
    matplotlib>=3.3
python_requires = >=3.8

[options.extras_require]
docs =
    Sphinx>=1.5
    furo
    myst-nb
    sphinx-copybutton
    sphinx-gallery

[options.package_data]
* = *.pyi, py.typed

[tool:pytest]
addopts = -W error

[isort]
profile = black
src_paths = mpl_playback

[flake8]
exclude = _version.py,.eggs,examples,*.pyi
max-line-length = 88
docstring-convention = numpy
ignore = D100, D213, D401, D413, D107, W503, E203

[coverage:run]
omit = *_tests*,*/install.py

[coverage:report]
exclude_lines =
    pragma: no cover
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
